--- a/style.css
+++ b/style.css
@@ -500,6 +500,9 @@ textarea {
     header {
         max-width: 180px;
         padding: 0px 10px;
+        top: 0;
+        right: 0;
+        left: 0;
     }
 
     .header-width ul {
@@ -516,9 +519,14 @@ textarea {
         display: flex;
         flex-direction: column-reverse;
         padding: 0;
+        height: 112.5px;
         align-items: center;
         align-content: center;
         margin: auto 0;
+    }
+
+    .footer-width p {
+        margin: 10px auto;
     }
     
     .footer-width ul {
@@ -532,10 +540,10 @@ textarea {
         grid-template-columns: 1fr;
         margin: 60px 15px;
     }
-    
+
     .over-ons img {
         object-fit: cover;
-        max-width: 100%;
+        min-width: 100%;
     }
     
     .over-ons-info h3 {
