--- a/style.css
+++ b/style.css
@@ -498,16 +498,19 @@ textarea {
     
 
     header {
-        max-width: 180px;
+        width: 100%;
+        position: fixed;
         padding: 0px 10px;
         top: 0;
         right: 0;
         left: 0;
     }
 
-    .header-width ul {
+    .header-width .web-nav {
         display: none;
     }
+
+    
 
     footer {
         height: 7em;
@@ -532,7 +535,7 @@ textarea {
     .footer-width ul {
         padding-left: 0px;
     }
-    
+
     /*----home pagina----*/
     
     
@@ -693,7 +696,7 @@ textarea {
     }
     
     .contactformulier .name {
-        padding: 20px;
+        padding-right: 20px;
     }
     
     .send-button {
@@ -701,10 +704,18 @@ textarea {
         justify-content: flex-end;
     }
     
+    .name {
+        padding: 0px;
+    }
+
     .contactformulier #name,
     .contactformulier #email,
     .contactformulier #phone {
-        width: 360px;
+        min-width: 365px;
+    }
+
+    textarea#message {
+        width: 340px;
     }
     
     .contactformulier label {
@@ -712,14 +723,16 @@ textarea {
     }
 
     .contactformulier textarea {
-        border-color: var(--primary);
-        background-color: #f1f1f1;
-        width: 360px;
+        border-color: var(--prim-dark);
+        background-color: var(--grey);
+        max-width: 365px;
+        margin-top: 10px;
     }
 
     .send-button {
         display: flex; 
         justify-content: flex-end;
-        margin: 30px 10px 0px 0px;
+        padding: 0px 0px 0px 0px;
+        margin: 30px 0px 0px 0px;
     }
 }
